@@ -8,6 +8,14 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2012-12-01 09:57 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  + source/rtl/hbping.c
+  + tests/testping.prg
+  * winmake/common.mak
+  * winmake/compile.mak
+  * winmake/rtl.lst
+    + add PRG level Winsock2 based ping functionality for Windows
+
 2012-11-30 06:12 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * include/hbcomp.h
   * source/compiler/harbour.c
